--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "description": "",
   "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "prepublish": "node .scripts/npm-prepublish.js",
     "test": "mocha --compilers js:babel-register src/**/__tests__/**/*.js"
